# cuda-smart-pointers

./: .clang-format  CMakeLists.txt  README.md  build.sh
src/: memory.cuh
src/test/: CMakeLists.txt  shared.cu  unified_shared.cu  unified_unique.cu  unique.cu
